# api-book-part-one

./: README.md
Part 1/bulk/travel/: booking_items_data.csv  booking_occupancy_rate_data.csv  booking_revenue_status_data.csv  customer_flight_preferences_data.parquet.gzip  customer_hotel_preferences_data.parquet.gzip  events_data.parquet.gzip  flight_inventory_data.csv  flight_popularity_data.csv  flight_popularity_data.parquet.gzip  flight_prices_data.csv  payments_overview_data.csv
Part 1/chapter3/travel/: crud.ipynb  crud.py  query.py  traveltech_data.ipynb
Part 1/chapter4/travel/: crud.ipynb
Part 1/chapter5/travel/: main.py  readme.md
Part 1/chapter7/travel/: requirements.txt
Part 1/chapter7/travel/sdk/src/swcpy/: test.ipynb  wanderdata_client_test.py
bulk/travel/: booking_items_data.parquet.gzip  booking_occupancy_rate_data.parquet.gzip  booking_revenue_status_data.parquet.gzip  customer_flight_class_data.csv  customer_flight_class_data.parquet.gzip  customer_flight_preferences_data.csv  customer_hotel_preferences_data.csv  customer_payments_data.csv  customer_payments_data.parquet.gzip  events_data.csv  flight_inventory_data.parquet.gzip  flight_overview_data.csv  flight_overview_data.parquet.gzip  flight_prices_data.parquet.gzip  optimized_revenue_data.csv  optimized_revenue_data.parquet.gzip  payments_overview_data.parquet.gzip  revenue_performance_data.csv  revenue_performance_data.parquet.gzip  test.csv
chapter3/: fantasy_data.db
chapter3/complete/: query.py  t_connect.py  t_crud.ipynb  test.ipynb  union.txt
chapter3/travel/: connect.py  travel_complete.sql  traveltech_data.ipynb
chapter4/travel/: crud.py  main.py  query.py  test.ipynb
chapter5/travel/: crud.py  description.txt  main.py  query.py  schemas.py  tes.ipynb
chapter7/complete/sdk/src/swcpy/: swc_client.py
chapter7/travel/sdk/: README.md  pyproject.toml
chapter7/travel/sdk/src/swcpy/: swc_client.py  swc_config.py  test.ipynb
