[build-system]
requires = ["setuptools>=80.10.2", "wheel>=0.45.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wanderdata-api"
version = "0.2.0"
description = "Travel intelligence platform transforming raw travel data into actionable insights"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [
    { name = "Daniel H. Vedia Jerez", email = "danielvediaj@gmail.com" }
]
maintainers = [
    { name = "Daniel H. Vedia Jerez", email = "danielvediaj@gmail.com" }
]
keywords = ["travel", "analytics", "api", "fastapi", "postgresql", "flights", "hotels"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Travel Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    
    # Database
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    
    # Data Processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=16.0.0",
    "fastparquet>=2025.12.0",
    
    # Validation & Serialization
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pydantic[email]>=2.10.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "backoff>=2.2.1",
    "python-dateutil>=2.9.0",
    "typing-extensions>=4.12.0",
    
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.0",
    
    # Development
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.1.0",
    "mypy>=1.11.0",
    "pre-commit>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.28.0",
    "jupyter>=1.0.0",
    "watchdog>=5.0.0",
    "debugpy>=1.8.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocstrings[python]>=0.27.0",
    "mkdocs-material>=9.5.0",
]
streamlit = [
    "streamlit>=1.36.0",
    "plotly>=5.24.0",
    "altair>=5.4.0",
]

[project.urls]
Homepage = "https://github.com/danielvedia/wanderdata-api"
Repository = "https://github.com/danielvedia/wanderdata-api.git"
Documentation = "https://wanderdata-api.readthedocs.io"
Issues = "https://github.com/danielvedia/wanderdata-api/issues"
Changelog = "https://github.com/danielvedia/wanderdata-api/blob/main/CHANGELOG.md"

[project.scripts]
wanderdata-start = "wanderdata.cli:start_server"
wanderdata-db = "wanderdata.cli:db_commands"
wanderdata-seed = "wanderdata.cli:seed_database"


[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_any_unimported = false
disallow_untyped_calls = true
disallow_untyped_decorators = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --tb=short"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (require database)",
    "unit: marks tests as unit tests (fast, no external dependencies)",
]

[tool.coverage.run]
omit = ["*/test_*.py", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.flake8]
max-line-length = 100
extend-ignore = "E203, W503"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    "*/migrations/*",
    "*/__init__.py"
]

[tool.pylint.MASTER]
ignore = ["migrations", "venv"]
jobs = 4
persistent = false
load-plugins = ["pylint.extensions.docparams"]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true